# snn_pc_hybrid

./: .gitignore  CONTEXTE_PROJET.md  README.md  colab_training.ipynb  config.py  demo.ipynb  full_gpu_training.ipynb  main.py  pyproject.toml  requirements.txt  run_training.py
core/: __init__.py  encoding.py  neuron.py  oscillator.py  synapse.py
experiments/: convergence_test.py  toy_language.py
graph/: __init__.py  message_passing.py  pc_gnn.py  phase_sync.py
modules/: __init__.py  arcuate.py  broca.py  wernicke.py
tests/: test_convergence.py  test_encoding.py  test_inference.py  test_neuron.py
training/: __init__.py  datasets.py  loss.py  surrogate.py  trainer.py  viz.py
